--- a/e-store/ui/package.json
+++ b/e-store/ui/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
+    "papaparse": "^5.4.1",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
