--- a/e-store/composer.json
+++ b/e-store/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "league/csv": "^9.14",
-        "mcamara/laravel-localization": "^1.8"
+        "mcamara/laravel-localization": "^1.8",
+        "stripe/stripe-php": "^13.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
