--- a/e-store/ui/package.json
+++ b/e-store/ui/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
@@ -17,6 +18,7 @@
     "jquery": "^3.7.1",
     "papaparse": "^5.4.1",
     "popper.js": "^1.16.1",
+    "stripe": "^14.18.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
