--- a/e-store/ui/package.json
+++ b/e-store/ui/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.0.6",
     "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
